# Sensor-filtering.Gamberov.Myzina-

./: CMakeLists.txt  README.md  filter.py  movement_detection.py  package.xml
launch/: sensor_filtering.launch
nodes/: filter_sensor_filtering.py  movement_detection_sensor_filtering.py  ros_lidar_1.py  ros_lidar_2.py
sensors_hw/: CMakeLists.txt  README.md  package.xml
sensors_hw/launch/: urg_lidar.launch
sensors_hw/nodes/: movement_detection_pid.py  movement_detection_sensor_filtering.py  ros_lidar_1.py  ros_lidar_2.py
worlds/: main.world
